--- a/app/globals.css
+++ b/app/globals.css
@@ -72,8 +72,7 @@ body {
 
     --chart-5: 27 87% 67%;
 
-    --radius: 0.5rem
-  }
+    --radius: 0.5rem}
   .dark {
 
     --background: 240 10% 3.9%;
@@ -122,8 +121,7 @@ body {
 
     --chart-4: 280 65% 60%;
 
-    --chart-5: 340 75% 55%
-  }
+    --chart-5: 340 75% 55%}
 }
 
 @layer base {
